fixed not showing item image on the home page

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@
 }
 
 .item-holder{
-  width: 250px;
+  width: 150px;
 }
 
 .cardBody{
-  height: 300px;
+  height: 150px;
 }
